force-app/main/default/objects/M_A__c/M_A__c.object-meta.xml
<CustomObject>
    <label>M&amp;A</label>
    <nameField>
        <label>M&amp;A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>