force-app/main/default/objects/M_A__c/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <type>TextArea</type>
</CustomField>