force-app/main/default/objects/M_A__c/fields/Commercial_Print__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Print</label>
    <type>Checkbox</type>
</CustomField>