force-app/main/default/objects/M_A__c/fields/Company_Owner__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner__c</fullName>
    <label>Company Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>