force-app/main/default/objects/M_A__c/fields/CVO_Connections__c.field-meta.xml
<CustomField>
    <fullName>CVO_Connections__c</fullName>
    <label>CVO Connections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>