force-app/main/default/objects/M_A__c/fields/eCommerce__c.field-meta.xml
<CustomField>
    <fullName>eCommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eCommerce</label>
    <type>Checkbox</type>
</CustomField>