force-app/main/default/objects/M_A__c/fields/Envelopes__c.field-meta.xml
<CustomField>
    <fullName>Envelopes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envelopes</label>
    <type>Checkbox</type>
</CustomField>