force-app/main/default/objects/M_A__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>