force-app/main/default/objects/M_A__c/fields/Est_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Est_Multiple__c</fullName>
    <description>Estimated multiple the transaction would occur at</description>
    <inlineHelpText>Estimated multiple the transaction would occur at</inlineHelpText>
    <label>Est Multiple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;4x</fullName>
            </value>
            <value>
                <fullName>4x-6x</fullName>
            </value>
            <value>
                <fullName>7x-8x</fullName>
            </value>
            <value>
                <fullName>&gt;8x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>