force-app/main/default/objects/M_A__c/fields/Flexible_Pkg__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Pkg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexible Pkg</label>
    <type>Checkbox</type>
</CustomField>