force-app/main/default/objects/M_A__c/fields/Flexo__c.field-meta.xml
<CustomField>
    <fullName>Flexo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexo</label>
    <type>Checkbox</type>
</CustomField>