force-app/main/default/objects/M_A__c/fields/Folding_Cartons__c.field-meta.xml
<CustomField>
    <fullName>Folding_Cartons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folding Cartons</label>
    <type>Checkbox</type>
</CustomField>