force-app/main/default/objects/M_A__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Consumer Retail</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Industrial/Manufacturing</fullName>
            </value>
            <value>
                <fullName>IT/Telecom</fullName>
            </value>
            <value>
                <fullName>Pharma/Healthcare</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Travel/Leisure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>