force-app/main/default/objects/M_A__c/fields/M_A_Name__c.field-meta.xml
<CustomField>
    <fullName>M_A_Name__c</fullName>
    <externalId>true</externalId>
    <label>M&amp;A Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>