force-app/main/default/objects/M_A__c/fields/M_A_Source__c.field-meta.xml
<CustomField>
    <fullName>M_A_Source__c</fullName>
    <label>M&amp;A Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry List</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>