force-app/main/default/objects/M_A__c/fields/MA_Calculation_WF__c.field-meta.xml
<CustomField>
    <fullName>MA_Calculation_WF__c</fullName>
    <label>MA Calculation WF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>