force-app/main/default/objects/M_A__c/fields/MA_Score__c.field-meta.xml
<CustomField>
    <fullName>MA_Score__c</fullName>
    <label>MA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>