force-app/main/default/objects/M_A__c/fields/Nashua_Labels__c.field-meta.xml
<CustomField>
    <fullName>Nashua_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nashua Labels</label>
    <type>Checkbox</type>
</CustomField>