force-app/main/default/objects/M_A__c/fields/Nashua_POS__c.field-meta.xml
<CustomField>
    <fullName>Nashua_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nashua POS</label>
    <type>Checkbox</type>
</CustomField>