force-app/main/default/objects/M_A__c/fields/Notable_Customers__c.field-meta.xml
<CustomField>
    <fullName>Notable_Customers__c</fullName>
    <label>Notable Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>