force-app/main/default/objects/M_A__c/fields/Plant_1__c.field-meta.xml
<CustomField>
    <fullName>Plant_1__c</fullName>
    <label>Plant 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>