force-app/main/default/objects/M_A__c/fields/Plant_2__c.field-meta.xml
<CustomField>
    <fullName>Plant_2__c</fullName>
    <label>Plant 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>