force-app/main/default/objects/M_A__c/fields/Plant_3__c.field-meta.xml
<CustomField>
    <fullName>Plant_3__c</fullName>
    <label>Plant 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>