force-app/main/default/objects/M_A__c/fields/Prime_Labels__c.field-meta.xml
<CustomField>
    <fullName>Prime_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prime Labels</label>
    <type>Checkbox</type>
</CustomField>