force-app/main/default/objects/M_A__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested in selling</fullName>
            </value>
            <value>
                <fullName>Unrealistic multiple</fullName>
            </value>
            <value>
                <fullName>No product fit</fullName>
            </value>
            <value>
                <fullName>Failed Diligence</fullName>
            </value>
            <value>
                <fullName>Undesirable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>