force-app/main/default/objects/M_A__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>