force-app/main/default/objects/M_A__c/fields/Rotary_Combo__c.field-meta.xml
<CustomField>
    <fullName>Rotary_Combo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rotary Combo</label>
    <type>Checkbox</type>
</CustomField>