force-app/main/default/objects/M_A__c/fields/Screen_Print__c.field-meta.xml
<CustomField>
    <fullName>Screen_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screen Print</label>
    <type>Checkbox</type>
</CustomField>