force-app/main/default/objects/M_A__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>If( MA_Calculation_WF__c &gt;80,&quot;A&quot;,
If(and(MA_Calculation_WF__c&gt;=60,Revenue__c&lt;80),&quot;B&quot;,
If(and(MA_Calculation_WF__c&gt;=40,Revenue__c&lt;60),&quot;C&quot;,
If(MA_Calculation_WF__c&lt;40,&quot;D&quot;, &quot;F&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>