force-app/main/default/objects/M_A__c/fields/Segment_OLD__c.field-meta.xml
<CustomField>
    <fullName>Segment_OLD__c</fullName>
    <label>Segment OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>