force-app/main/default/objects/M_A__c/fields/Sleeves__c.field-meta.xml
<CustomField>
    <fullName>Sleeves__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sleeves</label>
    <type>Checkbox</type>
</CustomField>