force-app/main/default/objects/M_A__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Untouched</fullName>
            </value>
            <value>
                <fullName>Segmented</fullName>
            </value>
            <value>
                <fullName>TB Contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Initial Call</fullName>
            </value>
            <value>
                <fullName>Initial Due Diligence</fullName>
            </value>
            <value>
                <fullName>LOI Signed</fullName>
            </value>
            <value>
                <fullName>Legal/PSA</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>