force-app/main/default/objects/M_A__c/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <label>Street Address 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>