force-app/main/default/objects/M_A__c/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3PL/Fulfillment</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Alcoholic Beverages</fullName>
            </value>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Apparel/Textiles</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Biotech</fullName>
            </value>
            <value>
                <fullName>Commercial Print</fullName>
            </value>
            <value>
                <fullName>Co-Packers/Decorators</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Department Store/Big Box</fullName>
            </value>
            <value>
                <fullName>Diversified</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Energy/Chemicals</fullName>
            </value>
            <value>
                <fullName>Entertainment Venue</fullName>
            </value>
            <value>
                <fullName>Envelopes</fullName>
            </value>
            <value>
                <fullName>Food/Baking/Confectionary</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Graphics Design</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Household/OTC</fullName>
            </value>
            <value>
                <fullName>HR and Staffing</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Labels</fullName>
            </value>
            <value>
                <fullName>Legal/Consulting</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>