force-app/main/default/objects/M_A__c/fields/Willingness_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_Sell__c</fullName>
    <label>Willingness to Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actively Selling</fullName>
            </value>
            <value>
                <fullName>Interested in Selling</fullName>
            </value>
            <value>
                <fullName>Not selling now</fullName>
            </value>
            <value>
                <fullName>No Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>